# chinchiro

./: Cargo.toml  LICENSE  create.css  index.html  makefile  map.csv  month.js
pkg/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts  package.json
src/: draw.rs  init.rs  lib.rs  map.rs  player.rs
